<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="cbt">E.coli - Aquagenx CBT</string>

    <string name="read_instructions">Read Instructions</string>
    <string name="confidenceInterval">Upper 95&#37; Confidence Interval</string>
    <string name="take_photo_of_cbt">Take a photo of the compartment bag</string>
    <string name="below25Degrees">Below 25 °C</string>
    <string name="setCompartmentColors">Set compartment colors</string>

    <string name="put_on_gloves">Put on plastic gloves</string>
    <string name="collect_100ml_water_sample_thio">Collect <b>100 ml</b> water sample with bottle or Thio Bag.</string>
    <string name="avoid_touching_with_bare_hands_thio">Avoid touching the inside of the bottle, lid or Thio Bag with bare hands.</string>
    <string name="open_growth_medium_sachet">Open growth medium sachet and add test bud straight to the sample from the sachet</string>
    <string name="dissolve_medium_in_sample">Dissolve medium in sample for 10 – 12 minutes maximum by periodically swirling the bottle or squeezing the test bud in the Thio Bag to promote release of the medium from its plastic carrier</string>
    <string name="medium_dissolves">The medium dissolves from its plastic carrier.</string>
    <string name="when_medium_dissolved">When medium is completely dissolved, the plastic carrier turns white or nearly white.</string>
    <string name="label_compartment_bag">Label the compartment bag with a permanent marker before filling</string>
    <string name="tear_perforated_seam">Tear off perforated seam at top of the bag.</string>
    <string name="rub_sides_of_compartment">Rub sides at the top of each compartment to open the bag, use the white tabs at top of the bag to keep the bag open while pouring.</string>
    <string name="slowly_pour_sample_into_bag">Slowly pour sample into bag while gently tilting and squeezing bag to distribute sample amongst five compartments.</string>
    <string name="fill_evenly_across_bag"><b>Fill evenly across bag to the black fill line</b>.</string>
    <string name="leave_test_bud_carrier">Leave test bud carrier in bottle or Thio Bag while pouring.</string>
    <string name="attach_seal_clip">Attach seal clip across the bag above the fill line and below the compartment top openings.</string>
    <string name="snap_rod_shaped">Snap rod-shaped part of the clip from other side of bag into U-shape to lock in place across the bag.</string>
    <string name="roll_fold_bag">After attaching clip, bag can be kept vertical or horizontal.</string>
    <string name="close_top_of_bag">Close the top of the bag with the yellow Whirl-Pak seal and then roll down the bag toward the seal clip <b>(step 1)</b> and fold the yellow ends <b>(step 2)</b>.</string>
    <string name="let_incubate">Let the sample incubate, depending on the ambient temperature:</string>
    <string name="take_photo_of_incubated">Take photo of the incubated sample.</string>
    <string name="change_colors_to_match">Change the colours in the interface to match the colours of the sample in the bag compartments.</string>
    <string name="click_compartments_to_change">Click the compartments to change colour.</string>
    <string name="clean_cbt">After having scored the testing results: open the bag and add 3 chlorine tablets to top of bag. Agitate bag until chlorine tablets dissolve. Let bag stand for 45 minutes. After 45 minutes, pour liquid contents into a sink, toilet or hole in the ground and safely dispose of the empty bag. Retain plastic clip for reuse.</string>

    <string name="low_risk_safe">Low Risk / Safe</string>
    <string name="probably_safe">Intermediate Risk / Probably Safe</string>
    <string name="possibly_safe">Intermediate Risk / Possibly Safe</string>
    <string name="possibly_unsafe">High Risk / Possibly Unsafe</string>
    <string name="probably_unsafe">High Risk / Probably Unsafe</string>
    <string name="unsafe">Very High Risk / Unsafe</string>
    <string name="temperature">Temperature</string>
    <string name="incubation_time">Incubation Time</string>
    <string name="temperature_34_44">35 – 44.5°C</string>
    <string name="temperature_31_34">31 – 34°C</string>
    <string name="temperature_25_30">25 – 30°C</string>
    <string name="below_25">Below 25 °C</string>
    <string name="hours_20_24">20 – 24 hours</string>
    <string name="hours_24_30">24 – 30 hours</string>
    <string name="hours_40_48">40 – 48 hours</string>
    <string name="incubate_in_portable">Incubate in a portable incubator, preferably at 35 – 37 °C for 48 hours or put in or near another heat source.</string>
    <string name="in_addition_to_portable">In addition to portable incubators, samples can be maintained at 25°C to 44.5°C using: thermal coolers/bags; proximity to heat sources for humans and food; poultry or reptile incubator, or near refrigerator coils or room heating vents.</string>

    <string name="collect_100ml_water_sample">Collect <b>100 ml</b> water sample with bottle</string>
    <string name="avoid_touching_with_bare_hands">Avoid touching the inside of the bottle, lid with bare hands.</string>
    <string name="add_growth_medium_sachet">Add the growth medium from the sachet into the sample</string>
    <string name="dissolve_growth_medium">Dissolve medium in sample for 10 – 12 minutes maximum by periodically swirling the bottle</string>
    <string name="slowly_pour_sample_into_chamber">Slowly pour sample mixed with growth medium into the test chamber</string>
    <string name="close_test_chamber">Close the test chamber</string>
    <string name="launch_coliform_test">Open the ffem Collect app and launch the relevant form and launch the test from the Coliform question</string>
    <string name="enter_test_settings">Enter the test details including the email address where notification of test result should be sent to</string>
    <string name="start_coliform_test">Tap the start button</string>
    <string name="place_phone_flat">Place the phone on a flat surface with the screen facing down</string>
    <string name="attach_incubator">Attach the provided compact incubator to the phone</string>
    <string name="place_test_chamber_incubator">Place the test chamber inside the compact incubator</string>
    <string name="switch_on_incubator">Switch on the compact incubator. A red indicator light on the incubator should glow</string>
    <string name="test_starts_taking_photos">The test starts and an occasional beep sound is heard depending on the sampling rate</string>
    <string name="wait_for_test_notification">Wait for notification by email for result of the test</string>
    <string name="dispose_test_chamber">Clean and dispose off the test chamber following proper procedures</string>

    <string name="coliformTest">Coliform Test</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="senderEmailDetails">Devices email details</string>
    <string name="invalidEmailAddress">Invalid email address</string>
    <string name="password">Password</string>
    <string name="useDevicesEmailDetails">Enter the credentials for Caddisfly Devices account</string>

</resources>