...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="?colorPrimary">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="?textColorPrimary"
...
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/pagerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_footer"
        android:layout_below="@id/toolbar">

        <org.akvo.caddisfly.widget.CustomViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
...
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="?textColorPrimary"
            android:textStyle="bold" />

        <org.akvo.caddisfly.widget.PageIndicatorView
            android:id="@+id/pager_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/image_pageRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
...
