...
    <string name="survey">Survey</string>
    <string name="warning">Warning</string>
    <string name="run_test">Run Test</string>
    <string name="start">Start</string>
    <string name="general">General</string>
    <string name="app_slogan">Water Quality System</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
...
    <string name="camera_busy">Camera Busy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="select_test">Select Test</string>
    <string name="save">Save</string>
    <string name="instructions">Instructions</string>
    <string name="analyze">Analyse</string>

    <plurals name="dilutions">
        <item quantity="one">@string/no_dilution</item>
        <item quantity="many">@string/times_dilution</item>
        <item quantity="other">@string/times_dilution</item>
...
    <!-- About Screen -->
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_information">Legal Information</string>
    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="navigate_up">Navigate up</string>
    <string name="calibrate_summary">Calibrate a test with standards</string>

    <string name="titration_entry_error">%1$s has to be less than or equal to %2$s</string>

    <string name="skip">Skip</string>

...
