...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_prepare"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
...
                android:minWidth="230dp"
                android:onClick="onStartTestClick"
                android:text="@string/next"
                android:theme="?primaryButtonStyle" />

            <Button
                android:id="@+id/button_instructions"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
...
